--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 .shopping-card {
     background-color: #fff;
     border-radius: 15px;
-    margin-left: -30px;
+    /* margin-left: -30px; */
+    margin-left: 50px;
     width: 680px;
     height: 830px;
 }
@@ -204,7 +205,8 @@ body {
     display: flex;
     justify-content: flex-end;
     margin-top: -829px;
-    margin-left: 50px;
+    /* margin-left: 50px; */
+    margin-right: 70px;
 }
 
 .title-summary h2 {
@@ -256,7 +258,8 @@ body {
     }
 
     .box {
-        width: 850px;
+        width: 675px;
+        margin-left: 90px;
     }
 }
 
@@ -265,7 +268,10 @@ body {
         margin: 0;
         margin-top: 30px;
         max-width: 800px;
-        width: 100%;
+    }
+
+    .box {
+        margin-left: 0;
     }
 }
 
