--- a/style.css
+++ b/style.css
@@ -108,9 +108,9 @@ body {
         margin-left: 90px;
     }
 
-    .shopping-card {
+    /* .shopping-card {
         height: 1200px;
-    }
+    } */
 
     .product-content {
         margin-top: 300px;
